--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
@@ -79,11 +79,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArduinoClass.h" />
+    <ClInclude Include="ArduinoCommDLL.h" />
+    <ClInclude Include="CoreFunctions.h" />
+    <ClInclude Include="SerialClass.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArduinoClass.cpp" />
     <ClCompile Include="ArduinoCommDLL.cpp" />
+    <ClCompile Include="CoreFunctions.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -92,6 +98,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SerialClass.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
