Fixed the Failure to connect issues.
The Arduino now consistently resets upon connect, and the buffer is cleared.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Debug
 /ArduinoCommSuite/*.suo
 /ArduinoCommSuite/ipch/arduinocommdll-e08f06db/arduinocommdll-aedf6606.ipch
 /ArduinoCommSuite/ipch/arduinocommdll-e08f06db/*.ipch
+/ArduinoCommSuite/ipch/arduinocommdll-b06502c2/*.ipch
