--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Debug
 /ArduinoCommSuite/ipch/arduinocommdll-e08f06db/arduinocommdll-aedf6606.ipch
 /ArduinoCommSuite/ipch/arduinocommdll-e08f06db/*.ipch
 /ArduinoCommSuite/ipch/arduinocommdll-b06502c2/*.ipch
+/ArduinoCommSuite/MatLab
+MatLab
