--- a/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.vcxproj
+++ b/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\ArduinoCommDLL\CoreFunctions.cpp" />
     <ClCompile Include="ArduinoCommTest.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
