Updated Project to remove redundancy.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ MatLab
 /ArduinoCommSuite/ArduinoCommTest/*.user
 /ArduinoCommSuite/ipch/arduinocommcdll-7205208/*.ipch
 /ArduinoCommSuite/ArduinoCommCDLL/*.user
+/ArduinoCommSuite/ipch/arduinocommcdll-e9dbc061/*.ipch
