--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CoreFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ArduinoCommCDLL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArduinoClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArduinoCommCDLL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
