Reorganization in progress.  Improvement to Build instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,13 @@
-/PingArduino/PingArduino.vcxproj.user
-/Debug/PingArduino.exe
-/Debug/PingArduino.ilk
-/Debug/PingArduino.pdb
-/PingArduino/Debug/PingArduino.lastbuildstate
-/PingArduino/Debug/PingArduino.log
-/PingArduino/Release/PingArduino.lastbuildstate
-/PingArduino/Release/PingArduino.log
-/PingArduino/Release/TestArduino.Build.CppClean.log
-/Release/TestArduino.zip
-/TestArduino.suo
-/TestArduino.v12.suo
-/*.opensdf
-Release
-Debug
 /*.sdf
-/ArduinoCommSuite/*.opensdf
+/*.suo
+/ArduinoCommSuite/x86
+/ArduinoCommSuite/ipch
+/ArduinoCommSuite/x64
 /ArduinoCommSuite/*.sdf
 /ArduinoCommSuite/*.suo
-/ArduinoCommSuite/ipch/arduinocommdll-e08f06db/arduinocommdll-aedf6606.ipch
-/ArduinoCommSuite/ipch/arduinocommdll-e08f06db/*.ipch
-/ArduinoCommSuite/ipch/arduinocommdll-b06502c2/*.ipch
-/ArduinoCommSuite/MatLab
-MatLab
+/ArduinoCommSuite/ArduinoCommTest/x86
+/ArduinoCommSuite/ArduinoCommTest/x64
 /ArduinoCommSuite/ArduinoCommTest/*.user
-/ArduinoCommSuite/ipch/arduinocommcdll-7205208/*.ipch
-/ArduinoCommSuite/ArduinoCommCDLL/*.user
-/ArduinoCommSuite/ipch/arduinocommcdll-e9dbc061/*.ipch
+/ArduinoCommSuite/ArduinoCommDLL/x86
+/ArduinoCommSuite/ArduinoCommDLL/x64
+/ArduinoCommSuite/ArduinoCommDLL/*.user
