Moved and renamed older communication project for clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 /ArduinoCommSuite/ArduinoCommDLL/x86
 /ArduinoCommSuite/ArduinoCommDLL/x64
 /ArduinoCommSuite/ArduinoCommDLL/*.user
-/TestArduino/Output
-/TestArduino/TestArduino/*.user
-/TestArduino/TestArduino/Intermediate
-/TestArduino/*.sdf
-/TestArduino/*.opensdf
-/TestArduino/*.suo
+/PrototypeCommTest/Output
+/PrototypeCommTest/PrototypeCommTest/*.user
+/PrototypeCommTest/PrototypeCommTest/Intermediate
+/PrototypeCommTest/*.sdf
+/PrototypeCommTest/*.opensdf
+/PrototypeCommTest/*.suo
