--- a/PrototypeCommTest/PrototypeCommTest/PrototypeCommTest.vcxproj
+++ b/PrototypeCommTest/PrototypeCommTest/PrototypeCommTest.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EC22156E-5793-4088-8598-06C18E2BCBB5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TestArduino</RootNamespace>
-    <ProjectName>TestArduino</ProjectName>
+    <RootNamespace>PrototypeCommTest</RootNamespace>
+    <ProjectName>PrototypeCommTest</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -79,9 +79,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)Output\$(PlatformShortName)\$(Configuration)\</OutDir>
+    <IntDir>Intermediate\$(PlatformShortName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)Output\$(PlatformShortName)\$(Configuration)\</OutDir>
+    <IntDir>Intermediate\$(PlatformShortName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
