More updates to the organization of the main project file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
-/ArduinoCommSuite/x86
 /ArduinoCommSuite/ipch
-/ArduinoCommSuite/x64
 /ArduinoCommSuite/*.sdf
+/ArduinoCommSuite/*.opensdf
 /ArduinoCommSuite/*.suo
-/ArduinoCommSuite/ArduinoCommTest/x86
-/ArduinoCommSuite/ArduinoCommTest/x64
+/ArduinoCommSuite/Output
+/ArduinoCommSuite/ArduinoCommTest/Intermediate
 /ArduinoCommSuite/ArduinoCommTest/*.user
-/ArduinoCommSuite/ArduinoCommDLL/x86
-/ArduinoCommSuite/ArduinoCommDLL/x64
+/ArduinoCommSuite/ArduinoCommDLL/Intermediate
 /ArduinoCommSuite/ArduinoCommDLL/*.user
-/PrototypeCommTest/Output
-/PrototypeCommTest/PrototypeCommTest/*.user
-/PrototypeCommTest/PrototypeCommTest/Intermediate
 /PrototypeCommTest/*.sdf
 /PrototypeCommTest/*.opensdf
 /PrototypeCommTest/*.suo
+/PrototypeCommTest/Output
+/PrototypeCommTest/PrototypeCommTest/Intermediate
+/PrototypeCommTest/PrototypeCommTest/*.user
