Updating Build specifics and encapsulating logging.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /PrototypeCommTest/Output
 /PrototypeCommTest/PrototypeCommTest/Intermediate
 /PrototypeCommTest/PrototypeCommTest/*.user
+/BuiltLibs/OutputCopy
