--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="ArduinoCommCDLL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Logging.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArduinoCommCDLL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logging.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
