--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
@@ -270,7 +270,9 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
     </ClInclude>
     <ClInclude Include="CoreFunctions.h" />
     <ClInclude Include="Logging.h" />
-    <ClInclude Include="SerialClass.h" />
+    <ClInclude Include="SerialWindows.h" />
+    <ClInclude Include="SerialGeneric.h" />
+    <ClInclude Include="SerialUnix.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -314,7 +316,9 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Logging.cpp" />
-    <ClCompile Include="SerialClass.cpp" />
+    <ClCompile Include="SerialWindows.cpp" />
+    <ClCompile Include="SerialGeneric.cpp" />
+    <ClCompile Include="SerialUnix.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
