Cleaning files to be rebuilt

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,19 @@
 /ArduinoCommSuite/*.sdf
 /ArduinoCommSuite/*.opensdf
 /ArduinoCommSuite/*.suo
+/ArduinoCommSuite/*.layout
 /ArduinoCommSuite/Output
 /ArduinoCommSuite/ArduinoCommTest/Intermediate
 /ArduinoCommSuite/ArduinoCommTest/*.user
+/ArduinoCommSuite/ArduinoCommTest/*.layout
+/ArduinoCommSuite/ArduinoCommTest/*.depend
+/ArduinoCommSuite/ArduinoCommTest/.objs
 /ArduinoCommSuite/ArduinoCommDLL/Intermediate
 /ArduinoCommSuite/ArduinoCommDLL/*.user
 /ArduinoCommSuite/ArduinoCommDLL/.objs
 /ArduinoCommSuite/ArduinoCommDLL/*.so
+/ArduinoCommSuite/ArduinoCommDLL/*.layout
+/ArduinoCommSuite/ArduinoCommDLL/*.depend
 /PrototypeCommTest/*.sdf
 /PrototypeCommTest/*.opensdf
 /PrototypeCommTest/*.suo
