--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
@@ -260,6 +260,7 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='MatLab|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='MatLab|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="ArduinoCommCSO.h" />
     <ClInclude Include="ArduinoCommDLL.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='MatLab|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='MatLab|x64'">false</ExcludedFromBuild>
@@ -268,6 +269,7 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="ArduinoCommSO.h" />
     <ClInclude Include="CoreFunctions.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="SerialWindows.h" />
